--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
     <p style="text-align: center; font:bold; font-size: medium;">Ask your query to get Feedback and Score</p>
     <p style="text-align: center; font: bold; font-size: medium;">The result of your query is {{ans}} </p>
     <form style="text-align: center;" action="{{url_for('query')}}" method="post">
-        <input type="text" placeholder="Enter your text here!" type="submit" name="question">
+        <input type="text" placeholder="Enter your text here!" name="question">
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
